SDGF-259: Remove EnableManager